amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-input-type-extension.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-input-type-extension.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-field
  Message: Cannot exist two or more fields with name 'anotherRandomText'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-input-type-extension.api.graphql#/declares/shape/InputType/property/property/anotherRandomText
  Property: 
  Range: [(6,4)-(6,29)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-field
  Message: Cannot exist two or more fields with name 'anotherRandomText'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-input-type-extension.api.graphql#/declares/shape/InputType/property/property/anotherRandomText_1
  Property: 
  Range: [(7,4)-(7,29)]
  Location: 
